--- a/home.html
+++ b/home.html
@@ -14,13 +14,140 @@
         <div class="flex space-x-32 text-xl font-extrabold text-gray-600">
           <div class="relative">
             <a href="home.html">Home</a>
-            <div class="absolute bg-black h-1 w-6 rounded-sm"></div>
+            <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
-          <a href="pages/formation.html">Foramtion</a>
-          <a href="pages/formation.html">Formateur</a>
+          <a href="pages/formation.html">Formations</a>
+          <a href="pages/formation.html">Formateurs</a>
           <a href="pages/members.html">Members</a>
         </div>
-        <div>admin</div>
+        <div class="flex">
+          <div class="font-semibold underline">Iskander Abbassi</div>
+          <button class="h-5 w-5 ml-4">
+            <img src="icons/bell.svg" alt="notification icon" />
+          </button>
+        </div>
+      </div>
+
+      <!-- table component -->
+      <div class="flex mt-5 mx-auto">
+        <div class="w-1/2">
+          <div class="flex justify-between">
+            <div class="font-bold text-3xl text-red-400">all Formations</div>
+            <input
+              type="search"
+              class="
+                bg-purple-white
+                shadow
+                rounded
+                border-2
+                py-2
+                px-3
+                border-gray-400
+                focus:outline-none
+                focus:ring-2
+                focus:ring-purple-600
+                focus:border-transparent
+              "
+              placeholder="Search"
+            />
+          </div>
+          <table class="min-w-max w-full table-auto mt-5">
+            <thead>
+              <tr
+                class="
+                  bg-gray-200
+                  text-gray-600
+                  uppercase
+                  text-sm
+                  leading-normal
+                "
+              >
+                <th class="py-3 px-6 text-left">Id</th>
+                <th class="py-3 px-6 text-left">Formation</th>
+                <th class="py-3 px-6 text-left">Date</th>
+                <th class="py-3 px-6 text-center">Name</th>
+                <th class="py-3 px-6 text-center">Surname</th>
+                <th class="py-3 px-6 text-center">Actions</th>
+              </tr>
+            </thead>
+            <tbody class="text-md font-normal">
+              <tr class="border-b border-gray-200 hover:bg-gray-100">
+                <td class="py-3 px-6 text-left whitespace-nowrap">
+                  <div class="items-center">
+                    <span class="">1</span>
+                  </div>
+                </td>
+
+                <td class="py-3 px-6 text-left whitespace-nowrap">
+                  <div class="items-center">
+                    <span class="">Election Js</span>
+                  </div>
+                </td>
+                <td class="py-3 px-6 text-left">
+                  <div class="items-center">
+                    <span>9/11/2021</span>
+                  </div>
+                </td>
+                <td class="py-3 px-6 text-center">
+                  <div class="flex items-center justify-center">brahim</div>
+                </td>
+                <td class="py-3 px-6 text-center">
+                  <span class="py-1 px-3">tuijine</span>
+                </td>
+                <td class="py-3 px-6 text-center">
+                  <div class="flex item-center justify-center">
+                    <!-- stilou button -->
+                    <button>
+                      <div
+                        class="
+                          w-4
+                          mr-2
+                          transform
+                          text-purple-500
+                          hover:scale-110
+                        "
+                      >
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor"
+                        >
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
+                          />
+                        </svg>
+                      </div>
+                    </button>
+                    <!-- pubala button -->
+                    <button>
+                      <div
+                        class="w-4 mr-2 transform text-red-500 hover:scale-110"
+                      >
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor"
+                        >
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+                          />
+                        </svg>
+                      </div>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
