--- a/pages/members.html
+++ b/pages/members.html
@@ -13,21 +13,26 @@
       <div class="flex justify-around h-20 mt-8">
         <div class="flex space-x-32 text-xl font-extrabold text-gray-600">
           <a href="../home.html">Home</a>
-          <a href="formation.html">Foramtion</a>
-          <a href="formateur.html">Formateur</a>
+          <a href="formation.html">Foramtions</a>
+          <a href="formateur.html">Formateurs</a>
           <div class="relative">
             <a href="members.html">Members</a>
-            <div class="absolute bg-black h-1 w-6 rounded-sm"></div>
+            <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
         </div>
-        <div></div>
+        <div class="flex">
+          <div class="font-semibold underline">Iskander Abbassi</div>
+          <button class="h-5 w-5 ml-4">
+            <img src="../icons/bell.svg" alt="notification icon" />
+          </button>
+        </div>
       </div>
 
       <!-- table component -->
-      <div class="flex mt-5 mx-auto ">
+      <div class="flex mt-5 mx-auto">
         <div class="w-1/2">
           <div class="flex justify-between">
-            <div class="font-bold text-3xl text-gray-600">Membres</div>
+            <div class="font-bold text-3xl text-red-400">Membres</div>
             <input
               type="search"
               class="
@@ -65,7 +70,7 @@
                 <th class="py-3 px-6 text-center">Actions</th>
               </tr>
             </thead>
-            <tbody class="text-md font-normal ">
+            <tbody class="text-md font-normal">
               <tr class="border-b border-gray-200 hover:bg-gray-100">
                 <td class="py-3 px-6 text-left whitespace-nowrap">
                   <div class="items-center">
@@ -78,7 +83,7 @@
                     <span class="">brahim</span>
                   </div>
                 </td>
-                <td class="py-3 px-6 text-left ">
+                <td class="py-3 px-6 text-left">
                   <div class="items-center">
                     <span>tuijine</span>
                   </div>
@@ -89,46 +94,56 @@
                   </div>
                 </td>
                 <td class="py-3 px-6 text-center">
-                  <span class="py-1 px-3 ">25 214 110</span>
+                  <span class="py-1 px-3">25 214 110</span>
                 </td>
                 <td class="py-3 px-6 text-center">
                   <div class="flex item-center justify-center">
-                    <div
-                      class="w-4 mr-2 transform text-purple-500 hover:scale-110"
-                    >
-                      <!-- stilou icon -->
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke="currentColor"
+                    <!-- stilou button -->
+                    <button>
+                      <div
+                        class="
+                          w-4
+                          mr-2
+                          transform
+                          text-purple-500
+                          hover:scale-110
+                        "
                       >
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
-                        />
-                      </svg>
-                    </div>
-                    <!-- pubala icon -->
-                    <div
-                      class="w-4 mr-2 transform text-red-500 hover:scale-110"
-                    >
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke="currentColor"
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor"
+                        >
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
+                          />
+                        </svg>
+                      </div>
+                    </button>
+                    <!-- pubala button -->
+                    <button>
+                      <div
+                        class="w-4 mr-2 transform text-red-500 hover:scale-110"
                       >
-                        <path
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-                        />
-                      </svg>
-                    </div>
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor"
+                        >
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+                          />
+                        </svg>
+                      </div>
+                    </button>
                   </div>
                 </td>
               </tr>
@@ -223,6 +238,23 @@
               placeholder="+216 25 214 110"
             />
           </form>
+          <button
+            class="
+              transform
+              hover:scale-105
+              shadow-lg
+              bg-gray-300
+              h-8
+              w-48
+              mt-6
+              text-center
+              ml-8
+              font-medium
+              rounded-lg
+            "
+          >
+            ajout
+          </button>
         </div>
       </div>
     </div>
