--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="tailwind.css" />
-    <title>home</title>
+    <title>HOME</title>
   </head>
   <body>
     <div class="container mx-auto">
@@ -16,8 +16,8 @@
             <a href="home.html">Home</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
-          <a href="pages/formation.html">Training</a>
-          <a href="pages/formation.html">Trainers</a>
+          <a href="pages/training.html">Training</a>
+          <a href="pages/trainers.html">Trainers</a>
           <a href="pages/members.html">Members</a>
         </div>
         <div class="flex">
