--- a/pages/members.html
+++ b/pages/members.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../tailwind.css" />
-    <title>Membres</title>
+    <title>MEMBERS</title>
   </head>
   <body>
     <div class="container mx-auto">
@@ -13,8 +13,8 @@
       <div class="flex justify-around h-20 mt-8">
         <div class="flex space-x-32 text-xl font-extrabold text-gray-600">
           <a href="../home.html">Home</a>
-          <a href="formation.html">Training</a>
-          <a href="formateur.html">Trainers</a>
+          <a href="training.html">Training</a>
+          <a href="trainers.html">Trainers</a>
           <div class="relative">
             <a href="members.html">Members</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
