--- a/pages/training.html
+++ b/pages/training.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../tailwind.css" />
-    <title>Membres</title>
+    <title>TRAINING</title>
   </head>
   <body>
     <div class="container mx-auto">
@@ -14,10 +14,10 @@
         <div class="flex space-x-32 text-xl font-extrabold text-gray-600">
           <a href="../home.html">Home</a>
           <div class="relative">
-            <a href="formation.html">Training</a>
+            <a href="training.html">Training</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
-          <a href="formateur.html">Trainers</a>
+          <a href="trainers.html">Trainers</a>
           <a href="members.html">Members</a>
         </div>
         <div class="flex">
@@ -79,7 +79,7 @@
 
                 <td class="py-3 px-6 text-left whitespace-nowrap">
                   <div class="items-center">
-                    <span class="">Election Js</span>
+                    <span class="">Electron Js</span>
                   </div>
                 </td>
                 <td class="py-3 px-6 text-left whitespace-nowrap">
@@ -172,7 +172,7 @@
                 focus:ring-purple-600
                 focus:border-transparent
               "
-              placeholder="Election Js"
+              placeholder="Name of training"
             />
             
             
@@ -194,7 +194,7 @@
                 focus:ring-purple-600
                 focus:border-transparent
               "
-              placeholder="9/11/2021"
+              placeholder="Date"
             />
           </form>
           <button
