--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
             <a href="home.html">Home</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
-          <a href="pages/formation.html">Training</a>
-          <a href="pages/formation.html">Trainers</a>
+          <a href="pages/training.html">Training</a>
+          <a href="pages/formateur.html">Trainers</a>
           <a href="pages/members.html">Members</a>
         </div>
         <div class="flex">
