--- a/pages/members.html
+++ b/pages/members.html
@@ -14,7 +14,7 @@
       <div class="flex justify-around h-20 mt-8">
         <div class="flex space-x-32 text-xl font-extrabold text-gray-600">
           <a href="../home.html">Home</a>
-          <a href="formation.html">Training</a>
+          <a href="training.html">Training</a>
           <a href="formateur.html">Trainers</a>
           <div class="relative">
             <a href="members.html">Members</a>
