--- a/pages/training.html
+++ b/pages/training.html
@@ -17,7 +17,7 @@
             <a href="training.html">Training</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
-          <a href="trainers.html">Trainers</a>
+          <a href="formateur.html">Trainers</a>
           <a href="members.html">Members</a>
         </div>
         <div class="flex">
