--- a/home.html
+++ b/home.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="tailwind.css" />
 
     <title>home</title>
-
   </head>
   <body>
     <div class="container mx-auto">
@@ -34,7 +33,7 @@
       <div class="flex mt-5 mx-auto">
         <div class="w-1/2">
           <div class="flex justify-between">
-            <div class="font-bold text-3xl text-red-400">all Formations</div>
+            <div class="font-bold text-3xl text-red-500">all Formations</div>
             <input
               type="search"
               class="
@@ -69,11 +68,10 @@
                 <th class="py-3 px-6 text-left">Date</th>
                 <th class="py-3 px-6 text-center">Name</th>
                 <th class="py-3 px-6 text-center">Surname</th>
-                <th class="py-3 px-6 text-center">Actions</th>
               </tr>
             </thead>
             <tbody class="text-md font-normal">
-              <tr class="border-b border-gray-200 hover:bg-gray-100">
+              <tr class="border-b border-gray-200 bg-white">
                 <td class="py-3 px-6 text-left whitespace-nowrap">
                   <div class="items-center">
                     <span class="">1</span>
@@ -96,59 +94,13 @@
                 <td class="py-3 px-6 text-center">
                   <span class="py-1 px-3">tuijine</span>
                 </td>
-                <td class="py-3 px-6 text-center">
-                  <div class="flex item-center justify-center">
-                    <!-- stilou button -->
-                    <button>
-                      <div
-                        class="
-                          w-4
-                          mr-2
-                          transform
-                          text-purple-500
-                          hover:scale-110
-                        "
-                      >
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          fill="none"
-                          viewBox="0 0 24 24"
-                          stroke="currentColor"
-                        >
-                          <path
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            stroke-width="2"
-                            d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
-                          />
-                        </svg>
-                      </div>
-                    </button>
-                    <!-- pubala button -->
-                    <button>
-                      <div
-                        class="w-4 mr-2 transform text-red-500 hover:scale-110"
-                      >
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          fill="none"
-                          viewBox="0 0 24 24"
-                          stroke="currentColor"
-                        >
-                          <path
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            stroke-width="2"
-                            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-                          />
-                        </svg>
-                      </div>
-                    </button>
-                  </div>
-                </td>
               </tr>
             </tbody>
           </table>
+        </div>
+        <div class="mx-auto space-y-14">
+          <canvas height="250" width="550" class="bg-blue-500"></canvas>
+          <canvas height="250" width="550" class="bg-red-600"></canvas>
         </div>
       </div>
     </div>
