--- a/pages/members.html
+++ b/pages/members.html
@@ -33,7 +33,7 @@
       <div class="flex mt-5 mx-auto">
         <div class="w-1/2">
           <div class="flex justify-between">
-            <div class="font-bold text-3xl text-red-400">Members</div>
+            <div class="font-bold text-3xl text-red-500">Members</div>
             <input
               type="search"
               class="
@@ -72,7 +72,7 @@
               </tr>
             </thead>
             <tbody class="text-md font-normal">
-              <tr class="border-b border-gray-200 hover:bg-gray-100">
+              <tr class="border-b border-gray-200 bg-white">
                 <td class="py-3 px-6 text-left whitespace-nowrap">
                   <div class="items-center">
                     <span class="">1</span>
