--- a/pages/members.html
+++ b/pages/members.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../tailwind.css" />
 
-    <title>Membres</title>
+    <title>MEMBERS</title>
   </head>
   <body>
     <div class="container mx-auto">
@@ -15,7 +15,7 @@
         <div class="flex space-x-32 text-xl font-extrabold text-gray-600">
           <a href="../home.html">Home</a>
           <a href="training.html">Training</a>
-          <a href="formateur.html">Trainers</a>
+          <a href="trainers.html">Trainers</a>
           <div class="relative">
             <a href="members.html">Members</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
@@ -176,7 +176,7 @@
                 focus:ring-purple-600
                 focus:border-transparent
               "
-              placeholder="brahim"
+              placeholder="First name"
             />
             <div class="font-medium text-base mt-3">LAST NAME</div>
             <input
@@ -196,7 +196,7 @@
                 focus:ring-purple-600
                 focus:border-transparent
               "
-              placeholder="tuijine"
+              placeholder="Family name"
             />
             <div class="font-medium text-base mt-3">E-MAIL</div>
             <input
@@ -236,7 +236,7 @@
                 focus:ring-purple-600
                 focus:border-transparent
               "
-              placeholder="+216 25 214 110"
+              placeholder="Exemple: 25 252 525"
             />
           </form>
           <button
