--- a/pages/trainers.html
+++ b/pages/trainers.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../tailwind.css" />
-    <title>Formateur</title>
+    <title>TRAINERS</title>
   </head>
   <body>
     <div class="container mx-auto">
@@ -15,7 +15,7 @@
           <a href="../home.html">Home</a>
           <a href="training.html">Training</a>
           <div class="relative">
-            <a href="formateur.html">Trainers</a>
+            <a href="trainers.html">Trainers</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
           <a href="members.html">Members</a>
@@ -175,7 +175,7 @@
                 focus:ring-purple-600
                 focus:border-transparent
               "
-              placeholder="brahim"
+              placeholder="First name"
             />
             <div class="font-medium text-base mt-3">LAST NAME</div>
             <input
@@ -195,7 +195,7 @@
                 focus:ring-purple-600
                 focus:border-transparent
               "
-              placeholder="tuijine"
+              placeholder="Family name"
             />
             <div class="font-medium text-base mt-3">E-MAIL</div>
             <input
@@ -235,7 +235,7 @@
                 focus:ring-purple-600
                 focus:border-transparent
               "
-              placeholder="+216 25 214 110"
+              placeholder="Exemple: 25 252 525"
             />
           </form>
           <button
