--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="tailwind.css" />
 
-    <title>home</title>
+    <title>HOME</title>
   </head>
   <body>
     <div class="container mx-auto">
@@ -18,7 +18,7 @@
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
           <a href="pages/training.html">Training</a>
-          <a href="pages/formateur.html">Trainers</a>
+          <a href="pages/trainers.html">Trainers</a>
           <a href="pages/members.html">Members</a>
         </div>
         <div class="flex">
@@ -33,7 +33,7 @@
       <div class="flex mt-5 mx-auto">
         <div class="w-1/2">
           <div class="flex justify-between">
-            <div class="font-bold text-3xl text-red-500">all Formations</div>
+            <div class="font-bold text-3xl text-red-500">All trainers</div>
             <input
               type="search"
               class="
@@ -67,7 +67,7 @@
                 <th class="py-3 px-6 text-left">Formation</th>
                 <th class="py-3 px-6 text-left">Date</th>
                 <th class="py-3 px-6 text-center">Name</th>
-                <th class="py-3 px-6 text-center">Surname</th>
+                <th class="py-3 px-6 text-center">Last name</th>
               </tr>
             </thead>
             <tbody class="text-md font-normal">
@@ -98,7 +98,7 @@
             </tbody>
           </table>
         </div>
-        <div class="mx-auto space-y-14">
+        <div class="mx-auto space-y-10">
           <canvas height="250" width="550" class="bg-blue-500"></canvas>
           <canvas height="250" width="550" class="bg-red-600"></canvas>
         </div>
