--- a/pages/training.html
+++ b/pages/training.html
@@ -17,7 +17,7 @@
             <a href="training.html">Training</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
-          <a href="formateur.html">Trainers</a>
+          <a href="trainers.html">Trainers</a>
           <a href="members.html">Members</a>
         </div>
         <div class="flex">
@@ -62,9 +62,11 @@
                   leading-normal
                 "
               >
-                <th class="py-3 px-6 text-left">Id</th>
-                <th class="py-3 px-6 text-left">Training</th>
-                <th class="py-3 px-6 text-left">Date</th>
+                <th class="py-3 px-6 text-center">Id</th>
+                <th class="py-3 px-6 text-center">Training</th>
+                <th class="py-3 px-6 text-center">Date</th>
+                <th class="py-3 px-6 text-center">Trainers</th>
+                <th class="py-3 px-6 text-center">Replaced Trainers</th>
                 <th class="py-3 px-6 text-center">Actions</th>
               </tr>
             </thead>
@@ -76,14 +78,24 @@
                   </div>
                 </td>
 
-                <td class="py-3 px-6 text-left whitespace-nowrap">
+                <td class="py-3 px-6 text-center whitespace-nowrap">
                   <div class="items-center">
                     <span class="">Electron Js</span>
                   </div>
                 </td>
-                <td class="py-3 px-6 text-left whitespace-nowrap">
+                <td class="py-3 px-6 text-center whitespace-nowrap">
                   <div class="items-center">
                     <span class="">9/11/2021</span>
+                  </div>
+                </td>
+                <td class="py-3 px-6 text-center whitespace-nowrap">
+                  <div class="items-center">
+                    <span class="">Rahal Yesser</span>
+                  </div>
+                </td>
+                <td class="py-3 px-6 text-center whitespace-nowrap">
+                  <div class="items-center">
+                    <span class="">Kouki Samah</span>
                   </div>
                 </td>
                 <td class="py-3 px-6 text-center">
@@ -201,11 +213,11 @@
                       w-full
                       px-2
                       border-gray-300
-                      focus:border-indigo-300
-                      focus:ring
-                      focus:ring-indigo-200
-                      focus:ring-opacity-50
-                      rounded-l-md
+                      focus:outline-none
+                      focus:ring-2
+                      focus:ring-purple-600
+                      focus:border-transparent
+                      rounded-r-md
                       shadow-sm
                     "
                   />
@@ -271,6 +283,39 @@
                 "
               >
                 <option selected disabled hidden>Select Trainer Name</option>
+                <option>skander Abbassi</option>
+                <option>bilel merseni</option>
+                <option>brahim tuijine</option>
+                <option>Rahal Yesser</option>
+                <option>Kouki Samah</option>
+
+                
+              </select>
+            </div>
+
+            <!-- select options wahda o5ra-->
+            <div class="font-medium text-base mt-3">Replaced Trainers</div>
+            <div>
+              <select
+                class="
+                  bg-purple-white
+                  shadow
+                  rounded
+                  border-2
+                  py-2
+                  px-3
+                  border-gray-400
+                  mt-1
+                  w-64
+                  focus:outline-none
+                  focus:ring-2
+                  focus:ring-purple-600
+                  focus:border-transparent
+                "
+              >
+                <option selected disabled hidden>Select Trainer Name</option>
+                <option>Rahal Yesser</option>
+                <option>Kouki Samah</option>
                 <option>brahim tuijine</option>
                 <option>bilel merseni</option>
                 <option>skander Abbassi</option>
