select members from db

--- a/home.html
+++ b/home.html
@@ -66,8 +66,8 @@
                 <th class="py-3 px-6 text-left">Id</th>
                 <th class="py-3 px-6 text-left">Formation</th>
                 <th class="py-3 px-6 text-left">Date</th>
-                <th class="py-3 px-6 text-center">Name</th>
-                <th class="py-3 px-6 text-center">Last name</th>
+                <th class="py-3 px-6 text-center">Trainer</th>
+                <th class="py-3 px-6 text-center">Replaced Trainer</th>
               </tr>
             </thead>
             <tbody class="text-md font-normal">
