--- a/pages/members.html
+++ b/pages/members.html
@@ -72,7 +72,10 @@
               </tr>
             </thead>
             <tbody class="text-md font-normal">
-              <tr class="border-b border-gray-200 bg-white">
+
+              <div id="memberstable"></div>
+
+              <!-- <tr class="border-b border-gray-200 bg-white">
                 <td class="py-3 px-6 text-left whitespace-nowrap">
                   <div class="items-center">
                     <span class="">1</span>
@@ -99,8 +102,7 @@
                 </td>
                 <td class="py-3 px-6 text-center">
                   <div class="flex item-center justify-center">
-                    <!-- stilou button -->
-                    <button>
+                   <button>
                       <div
                         class="
                           w-4
@@ -125,7 +127,7 @@
                         </svg>
                       </div>
                     </button>
-                    <!-- pubala button -->
+                     pubala button 
                     <button>
                       <div
                         class="w-4 mr-2 transform text-red-500 hover:scale-110"
@@ -147,7 +149,7 @@
                     </button>
                   </div>
                 </td>
-              </tr>
+              </tr> --> 
             </tbody>
           </table>
         </div>
