select members done

--- a/pages/members.html
+++ b/pages/members.html
@@ -13,7 +13,7 @@
       <!-- header mta3 l page -->
       <div class="flex justify-around h-20 mt-8">
         <div class="flex space-x-32 text-xl font-extrabold text-gray-600">
-          <a href="../home.html">Home</a>
+          <a href="home.html">Home</a>
           <a href="training.html">Training</a>
           <a href="trainers.html">Trainers</a>
           <div class="relative">
@@ -71,85 +71,7 @@
                 <th class="py-3 px-6 text-center">Actions</th>
               </tr>
             </thead>
-            <tbody class="text-md font-normal">
-
-              <div id="memberstable"></div>
-
-              <!-- <tr class="border-b border-gray-200 bg-white">
-                <td class="py-3 px-6 text-left whitespace-nowrap">
-                  <div class="items-center">
-                    <span class="">1</span>
-                  </div>
-                </td>
-
-                <td class="py-3 px-6 text-left whitespace-nowrap">
-                  <div class="items-center">
-                    <span class="">brahim</span>
-                  </div>
-                </td>
-                <td class="py-3 px-6 text-left">
-                  <div class="items-center">
-                    <span>tuijine</span>
-                  </div>
-                </td>
-                <td class="py-3 px-6 text-center">
-                  <div class="flex items-center justify-center">
-                    brahim@gmail.com
-                  </div>
-                </td>
-                <td class="py-3 px-6 text-center">
-                  <span class="py-1 px-3">25 214 110</span>
-                </td>
-                <td class="py-3 px-6 text-center">
-                  <div class="flex item-center justify-center">
-                   <button>
-                      <div
-                        class="
-                          w-4
-                          mr-2
-                          transform
-                          text-purple-500
-                          hover:scale-110
-                        "
-                      >
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          fill="none"
-                          viewBox="0 0 24 24"
-                          stroke="currentColor"
-                        >
-                          <path
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            stroke-width="2"
-                            d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z"
-                          />
-                        </svg>
-                      </div>
-                    </button>
-                     pubala button 
-                    <button>
-                      <div
-                        class="w-4 mr-2 transform text-red-500 hover:scale-110"
-                      >
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          fill="none"
-                          viewBox="0 0 24 24"
-                          stroke="currentColor"
-                        >
-                          <path
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            stroke-width="2"
-                            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-                          />
-                        </svg>
-                      </div>
-                    </button>
-                  </div>
-                </td>
-              </tr> --> 
+            <tbody class="text-md font-normal" id="tableContent">
             </tbody>
           </table>
         </div>
@@ -262,6 +184,8 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="../CRUD/members.js">
+      
+    </script>
   </body>
 </html>
