--- a/pages/trainers.html
+++ b/pages/trainers.html
@@ -12,7 +12,7 @@
       <!-- header mta3 l page -->
       <div class="flex justify-around h-20 mt-8">
         <div class="flex space-x-32 text-xl font-extrabold text-gray-600">
-          <a href="../home.html">Home</a>
+          <a href="home.html">Home</a>
           <a href="training.html">Training</a>
           <div class="relative">
             <a href="trainers.html">Trainers</a>
@@ -259,6 +259,6 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="../CRUD/trainers.js"></script>
   </body>
 </html>
