--- a/pages/training.html
+++ b/pages/training.html
@@ -12,7 +12,7 @@
       <!-- header mta3 l page -->
       <div class="flex justify-around h-20 mt-8">
         <div class="flex space-x-32 text-xl font-extrabold text-gray-600">
-          <a href="../home.html">Home</a>
+          <a href="home.html">Home</a>
           <div class="relative">
             <a href="training.html">Training</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
@@ -333,6 +333,6 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="../CRUD/trainning.js"></script>
   </body>
 </html>
