--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="tailwind.css" />
+    <link rel="stylesheet" href="../tailwind.css" />
 
     <title>HOME</title>
   </head>
@@ -17,14 +17,14 @@
             <a href="home.html">Home</a>
             <div class="absolute bg-purple-500 h-1 w-6 rounded-sm"></div>
           </div>
-          <a href="pages/training.html">Training</a>
-          <a href="pages/trainers.html">Trainers</a>
-          <a href="pages/members.html">Members</a>
+          <a href="training.html">Training</a>
+          <a href="trainers.html">Trainers</a>
+          <a href="members.html">Members</a>
         </div>
         <div class="flex">
           <div class="font-semibold underline">Iskander Abbassi</div>
           <button class="h-5 w-5 ml-4">
-            <img src="icons/bell.svg" alt="notification icon" />
+            <img src="../icons/bell.svg" alt="notification icon" />
           </button>
         </div>
       </div>
@@ -104,6 +104,6 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="../CRUD/home.js"></script>
   </body>
 </html>
