--- a/pages/members.html
+++ b/pages/members.html
@@ -84,6 +84,7 @@
           <form class="mt-4 text-black">
             <div class="font-medium text-base">NAME</div>
             <input
+              id="membersName"
               type="search"
               class="
                 bg-purple-white
@@ -104,6 +105,7 @@
             />
             <div class="font-medium text-base mt-3">LAST NAME</div>
             <input
+              id="membersLastName"
               type="search"
               class="
                 bg-purple-white
@@ -124,6 +126,7 @@
             />
             <div class="font-medium text-base mt-3">E-MAIL</div>
             <input
+              id="membersEmail"
               type="search"
               class="
                 bg-purple-white
@@ -144,6 +147,7 @@
             />
             <div class="font-medium text-base mt-3">PHONE</div>
             <input
+              id="membersPhone"
               type="search"
               class="
                 bg-purple-white
@@ -177,6 +181,7 @@
               font-medium
               rounded-lg
             "
+            id="memberAjoutBtn"
           >
             ADD
           </button>
