--- a/pages/trainers.html
+++ b/pages/trainers.html
@@ -160,6 +160,7 @@
             <div class="font-medium text-base">FIRST NAME</div>
             <input
               type="search"
+              id="name_trainer"
               class="
                 bg-purple-white
                 shadow
@@ -180,6 +181,7 @@
             <div class="font-medium text-base mt-3">LAST NAME</div>
             <input
               type="search"
+              id="lastname_trainer"
               class="
                 bg-purple-white
                 shadow
@@ -200,6 +202,7 @@
             <div class="font-medium text-base mt-3">E-MAIL</div>
             <input
               type="search"
+              id="email"
               class="
                 bg-purple-white
                 shadow
@@ -220,6 +223,7 @@
             <div class="font-medium text-base mt-3">PHONE</div>
             <input
               type="search"
+              id="phone"
               class="
                 bg-purple-white
                 shadow
@@ -239,6 +243,7 @@
             />
           </form>
           <button
+          id="btn-add"
             class="
               transform
               hover:scale-105
