--- a/pages/members.html
+++ b/pages/members.html
@@ -35,6 +35,8 @@
           <div class="flex justify-between">
             <div class="font-bold text-3xl text-red-500">Members</div>
             <input
+              onkeyup="searchMember()"
+              id="searchMember"
               type="search"
               class="
                 bg-purple-white
@@ -49,7 +51,7 @@
                 focus:ring-purple-600
                 focus:border-transparent
               "
-              placeholder="Search"
+              placeholder="Search by name"
             />
           </div>
           <table class="min-w-max w-full table-auto mt-5">
@@ -188,6 +190,7 @@
       </div>
     </div>
 
+    <!-- model components -->
     <div
       class="
         hidden
@@ -207,7 +210,7 @@
       <div class="bg-white rounded shadow-lg w-10/12 md:w-1/2">
         <!-- modal header -->
         <div class="border-b px-4 py-2 flex justify-between items-center">
-          <h3 class="font-semibold text-lg">Modal Title</h3>
+          <h3 class="font-bold text-xl text-blue-600">Modal Title</h3>
           <button class="text-black " onclick="closeModel()">&cross;</button>
         </div>
         <!-- modal body -->
@@ -215,7 +218,7 @@
           <form class="text-black grid grid-cols-2 gap-4">
             <div class="font-medium text-base">NAME</div>
             <input
-              id="membersName"
+              id="modalInputName"
               type="search"
               class="
                 bg-purple-white
@@ -236,7 +239,7 @@
             />
             <div class="font-medium text-base mt-3">LAST NAME</div>
             <input
-              id="membersLastName"
+              id="modalInputLastName"
               type="search"
               class="
                 bg-purple-white
@@ -257,7 +260,7 @@
             />
             <div class="font-medium text-base mt-3">E-MAIL</div>
             <input
-              id="membersEmail"
+              id="modalInputEmail"
               type="search"
               class="
                 bg-purple-white
@@ -278,7 +281,7 @@
             />
             <div class="font-medium text-base mt-3">PHONE</div>
             <input
-              id="membersPhone"
+              id="modalInputPhone"
               type="search"
               class="
                 bg-purple-white
@@ -316,6 +319,7 @@
             Cancel
           </button>
           <button
+            id="updateMember"
             class="bg-blue-600 hover:bg-blue-700 px-3 py-1 rounded text-white"
           >
             Update Member
